# ps_tools

./: LICENSE  README.md  pyproject.toml
cli/: __main__.py  _util.py  _ux.py
config/: TEMPLATE.answer.tml  TEMPLATE.answerdetailed.tml  TEMPLATE.liveboard.tml  TEMPLATE.table.tml  TEMPLATE.worksheet.tml  TEMPLATE_NO_JOIN.table.tml  Tab2TS_formulas.csv
input/exportinfo/: summary.csv
input/formulas/: formulas_SF Dashboard.twb.csv  formulas_SF Trial.tds.csv  formulas_Snowflake with calculations.tds.csv
input/join_paths/: path_SF Dashboard.twb.csv  path_SF Trial.tds.csv  path_Snowflake with calculations.tds.csv
input/metadata_objects/: metadata_SF Dashboard.twb.csv  metadata_SF Trial.tds.csv  metadata_Snowflake with calculations.tds.csv
input/relationships/: relations_SF Dashboard.twb.csv  relations_SF Trial.tds.csv  relations_Snowflake with calculations.tds.csv
input/tds/: SF Trial.tds  Snowflake with calculations.tds
input/twb/: SF Dashboard.twb
input/xfiles/: Orders Dashboard.twbx  SF Dashboard.tdsx  SF Dashboard.twbx  SF Trial.tdsx  Snowflake with calculations.tdsx
output/TML/SF Dashboard.twb/: CUSTOMER.table.tml  LINEITEM.table.tml  NATION.table.tml  ORDERS.table.tml  PART.table.tml  PARTSUPP.table.tml  REGION.table.tml  SF Dashboard.twb.worksheet.tml  SUPPLIER.table.tml
output/TML/SF Trial.tds/: CUSTOMER.table.tml  LINEITEM.table.tml  NATION.table.tml  ORDERS.table.tml  PART.table.tml  PARTSUPP.table.tml  REGION.table.tml  (+1 more)
ps_tools/: _client.py  _tabimport.py  _typing.py
tableau_tools/: _client.py  _tabimpclient.py  _tabimport.py  _typing.py
(+17 files in other folders)
